fixes caption clipping issue

--- a/src/components/home.module.scss
+++ b/src/components/home.module.scss
@@ -4,7 +4,7 @@
 }
 
 .content img {
-    max-height: 80vh;
-    max-width: 80vw;
+    max-height: 70vh;
+    max-width: 70vw;
     object-fit: cover;
 }
