--- a/src/components/work.module.scss
+++ b/src/components/work.module.scss
@@ -4,8 +4,8 @@
 }
 
 .content img {
-    max-height: 75vh;
-    max-width: 75vw;
+    max-height: 70vh;
+    max-width: 70vw;
     object-fit: cover;
 }
 
